# nv1sim

./: .gitignore  CMakeLists.txt  README.md  nv1sim.cpp  nv1sim.hpp
apps/quadtex/: DISABLE.CPP  DRAW.CPP  ENABLE.CPP  FILEIO.CPP  GEOM.CPP  IMAGE.CPP  MAKEFILE  PATCH.hpp  QUADTEX.DEF  QUADTEX.RC  RESOURCE.hpp  SAMPLE.hpp  WMAIN.CPP
core/: core.cpp  core.hpp  core_input.cpp  core_renderer.cpp  core_ui.cpp
core/logging/: logging.cpp  logging.hpp
core/ui/: ui.hpp  ui_base.cpp
nv/: nv1.hpp  nv1_class.hpp  nv1_regs.hpp
nv/classes/: nv1_class.hpp  nv1_ubeta.cpp
nv/core/: nv1_core.cpp  nv1_mapper.cpp  nv1_pfifo.cpp
util/: util.cpp  util.hpp
